--- a/pinpoint-1.7.1/web/src/main/webapp/features/navbar/navbar.html
+++ b/pinpoint-1.7.1/web/src/main/webapp/features/navbar/navbar.html
@@ -99,7 +99,7 @@
         </div>
     </div>
     <div style="position:fixed;right:10px;top:10px;">
-    	<span class="glyphicon glyphicon-question-sign navbarTooltip" style="cursor:pointer;font-size:17px;color:#FFF;top:0px;"></span>
+        <span title="退出" onclick="location.href='/login/loginOut.pinpoint'" class="glyphicon glyphicon-log-out navbarTooltip" style="cursor:pointer;font-size:17px;color:#FFF;top:0px;"></span>
     	<span class="glyphicon glyphicon-cog" ng-click="showConfig()" style="cursor:pointer;font-size:17px;color:#FFF;padding-left:8px;top:0px;"></span>
         <a href="/myConfigure/configure.pinpoint" target="_blank"><i class="glyphicon glyphicon-user" style="color:#FFF;padding-left:6px;font-size:17px;top:0px;"></i></a>    </div>
     <div id="ui-datepicker-div">
